--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.4.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "framer-motion": "^12.0.1",
     "fs": "^0.0.1-security",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
